--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="text">
             <div class="alignleft">Math MCQ <span>| Newton School </span></div>
             <div class="alignright">November 2021</div>
-           <div class="alignleft"><a  href="">(link)</a></div>
+           <div class="alignleft"><a  href="https://shabeenatouseef.github.io/MCQ/">(link)</a></div>
         </div>
         <div style="clear: both;"></div>
         <ul>
